# nav2_mpc_controller

./: .gitignore  CMakeLists.txt  README.md  mpc_controller.xml  package.xml
include/: mpc_controller.hpp  trajectory_profiler.hpp
src/: local_planner.cpp  mpc_controller.cpp  ref_trajectory_generator.cpp  trajectory_profiler.cpp  transform_tools.cpp  viz_function.cpp
